--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,16 @@
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
-
+<div class= "text-center">
+ <% if user_signed_in? %>
+         <div class="btn btn-default" ><%= link_to 'Sign out', destroy_user_session_path ,:method => 'delete' %></div></br></br>
+         <div class="btn btn-default" ><%= link_to "Edit Password",edit_user_registration_path %></div>
+<% end %>
+ <% if employee_signed_in? %>
+        <li><%= link_to 'Sign out', destroy_employee_session_path ,:method => 'delete' %></li>
+        <li><%= link_to "Edit Password",edit_employee_registration_path %></li>
+<% end %>
+</div>
 <%= yield %>
 
 </body>
