changes in stats

--- a/app/views/leaves/_filter.html.erb
+++ b/app/views/leaves/_filter.html.erb
@@ -7,7 +7,7 @@
           <div class="col-md-6 pull-left">
             <% if current_user  %>
             <%= link_to 'New Leave Application', new_leafe_path, { :class => 'btn btn-success' } %>
-            <% elsif current_empoyee  %>
+            <% elsif current_employee  %>
           <%= link_to 'New Leave Application', new_leafe_path, { :class => 'btn btn-success' } %>
             <% end %>
           </div>
