--- a/app/views/layouts/_employee_menu.html.erb
+++ b/app/views/layouts/_employee_menu.html.erb
@@ -1,1 +1,11 @@
 <%= current_employee.email %>
+
+<li class="sub-menu menu-item-leaves">
+  <%= link_to leaves_path do %>
+    <i class="fa fa-calendar"></i>
+    <span>Leave</span>
+  <% end %>
+  <!-- <ul class="sub">
+    <li><a href="#">General</a></li>
+  </ul> -->
+</li>
