--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,8 @@
     </ul>
   </div>
 </header>
-<aside><br/><br/><br/><div>
+<aside><br/><br/><br/>
+<div style="width: 210px;height: 100%;position: fixed;background: #2a3542;">
   <ul><li>
     <a href="#">
       <i class="fa fa-dashboard"></i>
@@ -59,7 +60,8 @@
     <% elsif current_employee %>
     	<%= render 'layouts/employee_menu' %>
     <%end%>
-   </ul> 
+   </ul>
+   </div> 
 </aside>
     <section id="main-content">
       <section class="wrapper site-min-height">
