--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -47,6 +47,12 @@ h5 {
 .nav > li.active > a {
   color: #ffffff;
 }
+#sidebar {
+  width: 210px;
+  height: 100%;
+  position: fixed;
+  background: #2a3542;
+}
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus {
   background-color: #293846;
