--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,11 @@
+<% if resource_name == :employee %>
 <div class="container">
   <%= form_for(resource, :html => {:class => 'form-signin'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
     <h2 class="form-signin-heading">Register</h2>
     <div class="login-wrap">
         <p>Enter your details below</p>
-        
+        <%#debugger%>
         <%= f.email_field :email, :class => 'form-control', :placeholder => 'Email' %>
         <%= f.password_field :password, autocomplete: "off", :class => 'form-control', :placeholder => 'Password' %>
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control', :placeholder => 'Re-type Password' %>
@@ -19,3 +20,4 @@
     </div>
   <% end %>
 </div>
+<%end%>
