--- a/app/views/leaves/_stats.html.erb
+++ b/app/views/leaves/_stats.html.erb
@@ -46,9 +46,9 @@
 			</div>
 			<div class="value">
 				<h1 class=" count3">
-					$
+					<%= total_leave - pending_leaves %>
 				</h1>
-				<p>(Last 30 Days)</p>
+				<p>Remaining </p>
 			</div>
 		</section>
 	</div>
