--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "text-center">
 <% if !user_signed_in?  %>
-<div class="btn btn-default"><%= link_to 'USER SIGN IN', user_session_path  %></div></br></br>
+<div class="btn btn-default"><%= link_to 'ADMIN SIGN IN', user_session_path  %></div></br></br>
 <div class="btn btn-default"><%= link_to "EMPLOYEE SIGN IN",employee_session_path %></div>
 <%end%>
 </div>
