--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 <aside><br/><br/><br/>
 <div style="width: 210px;height: 100%;position: fixed;background: #2a3542;">
   <ul><li>
-    <a href="#">
+    <a href="/">
       <i class="fa fa-dashboard"></i>
       <span>Dashboard</span>
     </a></li>
