--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,8 @@
   </div>
 </header>
 <aside><br/><br/><br/>
-<div style="width: 210px;height: 100%;position: fixed;background: #2a3542;">
-  <ul><li>
+<div id ="aside_bar">
+  <ul> <li>
     <a href="/">
       <i class="fa fa-dashboard"></i>
       <span>Dashboard</span>
