--- a/app/views/leaves/_stats.html.erb
+++ b/app/views/leaves/_stats.html.erb
@@ -48,7 +48,7 @@
 				<h1 class=" count3">
 					<%= total_leave - pending_leaves %>
 				</h1>
-				<p>Remaining </p>
+				<p>Total Approved</p>
 			</div>
 		</section>
 	</div>
