--- a/app/views/leaves/_list.html.erb
+++ b/app/views/leaves/_list.html.erb
@@ -10,6 +10,8 @@
 				<th>Date Created</th>
 				<th>Status</th>
 				<th>Action</th>
+				<th>Approve</th>
+				<th>Reject</th>
 			</tr>
 		</thead> 
 		<tbody>
@@ -24,46 +26,33 @@
 
 				<td>
 				<% if leave.status == "Approve" %>
-				<div class ="btn btn-info btn-xs"><%= leave.status %>
+					<div class ="btn btn-info btn-xs"><%= leave.status %>
 				<%elsif leave.status == "Reject"%>
-				<div class ="btn btn-danger btn-xs"><%= leave.status %>
+					<div class ="btn btn-danger btn-xs"><%= leave.status %>
 				<% else %>
 				<div class ="btn btn-primary btn-xs"><%= leave.status = "Pending"%>
 				</div>
 				<%end%>
 				</td>
 				
-				<td>
-				<%= link_to leafe_path(leave), :class => "btn btn-primary btn-xs" do %>
-				  <i class="fa fa-folder"></i> View
-				<% end %>
-				<% if current_user %>
-					<%= link_to edit_leafe_path(leave), :class => "btn btn-info btn-xs" do %>
-					  <i class="fa fa-pencil"></i> Edit
-					<% end %>
-
-					<%#= submit_tag "Approve", :controller => "leaves", :action => "approve" %>
-					<%#= leave.submit "Approve", :value => 'Approve'%>
-					<%#= submit_tag "Approve", :name => 'Approve' %>
-					<%#= button_to "Approve", approve_leafe_path(leave) %>
-				<!-- 	<button class="btn btn-info btn-xs" type="submit">Approved</button> -->
-					<!-- <button class="btn btn-danger btn-xs" type="submit">Reject</button> -->
-	
-				<%end%>
-			</td>
-			</tr>
+		<td>
+			<%= link_to leafe_path(leave), :class => "btn btn-primary btn-xs" do %>
+			  <i class="fa fa-folder"></i> View
 			<% end %>
-			<%if current_user %>
-        <%= form_for @leave, url: {action: "approve"} do  |leave|%>
-        <%= leave.submit "Approve", :value => 'Approve'%>
-        <% end %>
-      <%end%>
-      <%if current_user %>
-        <%= form_for @leave, url: {action: "reject"} do  |leave|%>
-        <%= leave.submit "Reject", :value => 'Reject'%>
-        <% end %>
-      <%end%>
-			
+			<% if current_user %>
+				<%= link_to edit_leafe_path(leave), :class => "btn btn-info btn-xs" do %><i class="fa fa-pencil"></i> Edit
+				<% end %><td>
+				<%= form_for leave, url:  approve_leafe_path(leave)  do  |f|%>
+					<%= f.submit "Approve",:class => "btn btn-success btn-xs", :value => 'Approve'%>
+				<% end %></td><td>
+				<%= form_for leave,  url:  reject_leafe_path(leave) do  |t|%>
+					<%= t.submit "Reject",:class => "btn btn-danger btn-xs", :value => 'Reject'%>
+				<% end %></td>
+			<%end%>
+		</td>
+	
+</tr>
+			<% end %>
 		</tbody>
 
 	</table>
