--- a/app/views/leaves/_list.html.erb
+++ b/app/views/leaves/_list.html.erb
@@ -10,8 +10,10 @@
 				<th>Date Created</th>
 				<th>Status</th>
 				<th>Action</th>
+				<% if current_user%>
 				<th>Approve</th>
 				<th>Reject</th>
+				<%end%>
 			</tr>
 		</thead> 
 		<tbody>
