--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -5,6 +5,13 @@
  *   version 2.2
  *
 */
+#admin_tag{
+  background: #ffff99;
+}
+#holiday_tag{
+  background: #ccffb3;
+}
+
 #aside_bar {
   width: 13%;height: 100%; display: block;
   padding: 15px 0 15px 10px; position: fixed;background: #2a3542;
