--- a/app/views/leaves/_stats.html.erb
+++ b/app/views/leaves/_stats.html.erb
@@ -35,7 +35,7 @@
 				<%end%>
 				<%= pending_leaves %></h1>
 				<%end%>
-				<p>Pending Leave</p>
+				<p>Not Yet Approved</p>
 			</div>
 		</section>
 	</div>
