--- a/app/views/leaves/_form.html.erb
+++ b/app/views/leaves/_form.html.erb
@@ -13,7 +13,7 @@
         <table class="table table-striped table-hover">
           <thead>
             <tr>
-              <th>Task</th>
+              <th>Description</th>
               <th></th>
               <th></th>
             </tr>
@@ -42,9 +42,3 @@
 </section>
 <% end %>
 
-<script>
-  window.NestedFormEvents.prototype.insertFields = function(content, assoc, link) {
-    var $tr = $(link).parent().find("#tbody");
-    return $tr.append(content);
-  }
-</script>
