--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -11,4 +11,11 @@
     <i class="fa fa-calendar"></i>
     <span>Leave</span>
   <% end %>
+</li><br/>
+
+<li class="sub-menu menu-item-leaves">
+  <%= link_to leaves_path do %>
+    <i class="fa fa-calendar"></i>
+    <span>Leave</span>
+  <% end %>
 </li>
