--- a/app/views/leaves/_stats.html.erb
+++ b/app/views/leaves/_stats.html.erb
@@ -7,15 +7,11 @@
 				</div>
 				<div class="value">
 					<h1 class="count">
-					<% if current_user || current_employee %>
-					<% total_leave=0 %>
-					<% @leaves.each do |leave| %>
-					<% total_leave = total_leave + (leave.leave_to - leave.leave_from) %>
-					<% end %>
-					<%= total_leave %>
-					<% end %>
-					</h1>
-					<p>Total Leave</p>
+					<% if current_user || current_employee %><% total_leave=0 %>
+						<% @leaves.each do |leave| %>
+						<% total_leave = total_leave + (leave.leave_to-leave.leave_from) %>
+						<% end %><%= total_leave %>
+					<% end %></h1><p>Total Leave</p>
 				</div>
 			</section>
 		</div>
@@ -26,14 +22,12 @@
 			</div>
 			<div class="value">
 				<h1 class=" count2">
-				<% if current_user || current_employee %>		
-				<% pending_leaves = 0 %>
+				<% if current_user || current_employee %><% pending_leaves=0 %>
 				<% @leaves.each do |leave| %>
 					<% if leave.approved == false %>
-						<% pending_leaves = pending_leaves + (leave.leave_to - leave.leave_from) %>
+					<% pending_leaves = pending_leaves + (leave.leave_to - leave.leave_from) %>
 					<% end%>
-				<%end%>
-				<%= pending_leaves %></h1>
+				<%end%><%= pending_leaves %></h1>
 				<%end%>
 				<p>Not Yet Approved</p>
 			</div>
