--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -13,9 +13,9 @@
   <% end %>
 </li><br/>
 
-<li class="sub-menu menu-item-leaves">
-  <%= link_to leaves_path do %>
+<li class="sub-menu menu-item-holidays">
+  <%= link_to holidays_path do %>
     <i class="fa fa-calendar"></i>
-    <span>Leave</span>
+    <span>Holiday</span>
   <% end %>
 </li>
