--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -20,8 +20,8 @@
           </thead>
           <tbody id="tbody">
             <tr>
-              <td label class="col-sm-2 control-label">
-                <%= f.text_field :task, :class => 'form-control'%>       
+              <td label class="col-sm-6 control-label">
+                <%= f.text_field :description, :class => 'form-control'%>       
               </td>
               <td  >
                 <%= f.input :leave_from,:class => "datepicker" %>
