--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,10 +1,9 @@
+<h3>Holiday Schedule</h3>
 <div class="row">
   <div class="col-lg-12">
     <section class="panel">
       <div class="panel-body">
         <% if current_user %>
-          <%= render "filter" %>
-        <% elsif current_employee %>
           <%= render "filter" %>
         <% end %>
         <%= render 'list'%>  
