--- a/app/views/layouts/_employee_menu.html.erb
+++ b/app/views/layouts/_employee_menu.html.erb
@@ -6,3 +6,11 @@
     <span>Leave</span>
   <% end %>
 </li><br/>
+
+
+<li class="sub-menu menu-item-holidays">
+  <%= link_to holidays_path do %>
+    <i class="fa fa-calendar"></i>
+    <span>Holiday</span>
+  <% end %>
+</li>
