added name field in employee + permit

--- a/app/views/leaves/_list.html.erb
+++ b/app/views/leaves/_list.html.erb
@@ -3,7 +3,7 @@
 		<thead>
 			<tr>
 			<% if current_user%>
-				<th>Employee ID</th>
+				<th>Employee Name</th>
 			<%elsif current_employee %>
 				<th>Leave Added </th>
 			<%end%>
