--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,9 @@
     <h2 class="form-signin-heading">Register</h2>
     <div class="login-wrap">
         <p>Enter your details below</p>
-        <%#debugger%>
+        <% if resource_name = :employee %>
+        <%= f.text_field :name, :class => 'form-control', :placeholder => 'Name' %>
+        <% end %>
         <%= f.email_field :email, :class => 'form-control', :placeholder => 'Email' %>
         <%= f.password_field :password, autocomplete: "off", :class => 'form-control', :placeholder => 'Password' %>
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control', :placeholder => 'Re-type Password' %>
