--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,17 @@
-<% if resource_name == :employee %>
+<% if resource_name == :user %>
+
+<% elsif resource_name == :employee%>
+
+<%else%>
 <div class="container">
   <%= form_for(resource, :html => {:class => 'form-signin'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
     <h2 class="form-signin-heading">Register</h2>
     <div class="login-wrap">
         <p>Enter your details below</p>
-        <% if resource_name = :employee %>
+     
         <%= f.text_field :name, :class => 'form-control', :placeholder => 'Name' %>
-        <% end %>
+      
         <%= f.email_field :email, :class => 'form-control', :placeholder => 'Email' %>
         <%= f.password_field :password, autocomplete: "off", :class => 'form-control', :placeholder => 'Password' %>
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control', :placeholder => 'Re-type Password' %>
