--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -24,11 +24,11 @@
                 <%= f.text_field :description, :class => 'form-control'%>       
               </td>
               <td  >
-                <%= f.input :leave_from,:class => "datepicker" %>
+                <%= f.input :from,:class => "datepicker" %>
               </td>
 
               <td >
-                <%= f.input :leave_to, :class => 'form-control'%>
+                <%= f.input :to, :class => 'form-control'%>
               </td>
             </tr>
           </tbody> 
