--- a/app/views/leaves/_stats.html.erb
+++ b/app/views/leaves/_stats.html.erb
@@ -7,7 +7,8 @@
 				</div>
 				<div class="value">
 					<h1 class="count">
-					<% if current_user || current_employee %><% total_leave=0 %>
+					<% if current_user %><% total_leave=0 %>
+
 						<% @leaves.each do |leave| %>
 						<% total_leave = total_leave + (leave.leave_to-leave.leave_from) %>
 						<% end %><%= total_leave %>
@@ -22,7 +23,7 @@
 			</div>
 			<div class="value">
 				<h1 class=" count2">
-				<% if current_user || current_employee %><% pending_leaves=0 %>
+				<% if current_user %><% pending_leaves=0 %>
 				<% @leaves.each do |leave| %>
 					<% if leave.approved == false %>
 					<% pending_leaves = pending_leaves + (leave.leave_to - leave.leave_from) %>
@@ -40,7 +41,7 @@
 			</div>
 			<div class="value">
 				<h1 class=" count3">
-					<%= total_leave - pending_leaves %>
+					<%#= total_leave - pending_leaves %>
 				</h1>
 				<p>Total Approved</p>
 			</div>
