--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -18,4 +18,11 @@
     <i class="fa fa-calendar"></i>
     <span>Holiday</span>
   <% end %>
+</li><br/>
+
+<li class="sub-menu menu-item-holidays">
+  <%= link_to hardwares_path do %>
+    <i class="fa fa-calendar"></i>
+    <span>Hardware</span>
+  <% end %>
 </li>
