--- a/app/views/hardwares/_form.html.erb
+++ b/app/views/hardwares/_form.html.erb
@@ -36,7 +36,7 @@
                 <%= f.text_field :brand, :class => 'form-control'%>       
               </td>
               <td >
-                <%= f.input :to, :class => 'form-control'%>
+                <%= f.input :purchase_date,:class => "datepicker"%>
               </td>
               <td>
                 <%= f.text_field :token_no, :class => 'form-control'%>       
