--- a/app/views/hardwares/show.html.erb
+++ b/app/views/hardwares/show.html.erb
@@ -34,7 +34,7 @@
       <div class="col-lg-4 col-sm-4">
         <p>
           <strong>Token</strong>
-            <%= @hardware.token %>
+            <%= @hardware.token_no %>
         </p>
       </div>
     </div>
