--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,11 +1,3 @@
-<li class="sub-menu menu-item-client">
-  <i class="fa fa-male"></i>
-  <ul class="sub">
-    <li><%#= link_to 'All Clients', clients_path, { :class=>"" } %></li>
-    <li><%#= link_to 'Add New Client', new_client_path, { :class => '' } %></li>
-  </ul>
-</li><br/>
-
 <li class="sub-menu menu-item-leaves">
   <%= link_to leaves_path do %>
     <i class="fa fa-calendar"></i>
@@ -21,8 +13,8 @@
 </li><br/>
 
 <li class="sub-menu menu-item-holidays">
-  <%= link_to hardwares_path do %>
-    <i class="fa fa-calendar"></i>
-    <span>Hardware</span>
+  <%= link_to employees_path do %>
+    <i class="fa fa-male"></i>
+    <span>Employee</span>
   <% end %>
 </li>
