for admin login employee

--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -13,6 +13,13 @@
 </li><br/>
 
 <li class="sub-menu menu-item-holidays">
+  <%= link_to hardwares_path do %>
+    <i class="fa fa-calendar"></i>
+    <span>Hardware</span>
+  <% end %>
+</li><br/>
+
+<li class="sub-menu menu-item-holidays">
   <%= link_to employees_path do %>
     <i class="fa fa-male"></i>
     <span>Employee</span>
