--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,3 +1,7 @@
+<% if current_user %>
+ <div class= "text-center">
+ <%= link_to 'New Employee', new_employee_path, { :class => 'btn btn-success' } %>
+</div>
 <div class ="col-md-10">
 	<table class="display table table-bordered table-striped">
 		<thead>
@@ -18,3 +22,4 @@
 		</tbody>
 	</table>
 </div>
+<%end%>
