--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -24,4 +24,11 @@
     <i class="fa fa-male"></i>
     <span>Employee</span>
   <% end %>
+</li><br/>
+
+<li class="sub-menu menu-item-holidays">
+  <%= link_to salaries_path do %>
+    <i class="fa fa-male"></i>
+    <span>Salary</span>
+  <% end %>
 </li>
