--- a/app/views/leaves/_list.html.erb
+++ b/app/views/leaves/_list.html.erb
@@ -54,16 +54,16 @@
 				</td>
 				
 		<td>
-			<%= link_to leafe_path(leave), :class => "btn btn-primary btn-xs" do %>
+			<%= link_to leave_path(leave), :class => "btn btn-primary btn-xs" do %>
 			  <i class="fa fa-folder"></i> View
 			<% end %>
 			<% if current_user %>
-				<%= link_to edit_leafe_path(leave), :class => "btn btn-info btn-xs" do %><i class="fa fa-pencil"></i> Edit
+				<%= link_to edit_leave_path(leave), :class => "btn btn-info btn-xs" do %><i class="fa fa-pencil"></i> Edit
 				<% end %><td>
-				<%= form_for leave, url:  approve_leafe_path(leave)  do  |f|%>
+				<%= form_for leave, url:  approve_leave_path(leave)  do  |f|%>
 					<%= f.submit "Approve",:class => "btn btn-success btn-xs", :value => 'Approve'%>
 				<% end %></td><td>
-				<%= form_for leave,  url:  reject_leafe_path(leave) do  |t|%>
+				<%= form_for leave,  url:  reject_leave_path(leave) do  |t|%>
 					<%= t.submit "Reject",:class => "btn btn-danger btn-xs", :value => 'Reject'%>
 				<% end %></td>
 			<%end%>
