--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -14,7 +14,7 @@
 
 <li class="sub-menu menu-item-holidays">
   <%= link_to hardwares_path do %>
-    <i class="fa fa-calendar"></i>
+    <i class="fa fa-briefcase"></i>
     <span>Hardware</span>
   <% end %>
 </li><br/>
@@ -28,7 +28,14 @@
 
 <li class="sub-menu menu-item-holidays">
   <%= link_to salaries_path do %>
-    <i class="fa fa-male"></i>
+    <i class="fa fa-certificate"></i>
     <span>Salary</span>
+  <% end %>
+</li><br/>
+
+<li class="sub-menu menu-item-holidays">
+  <%= link_to items_index_path do %>
+    <i class="fa fa-check"></i>
+    <span>Item</span>
   <% end %>
 </li>
