--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,7 @@
 		<thead>
 			<tr>
 				<th>Salary Id</th>
+				<th>Salary Month</th>
 				<th>Employee Id </th>
 				<th>Employee Name </th>
 				<th>Efective Salary</th>
@@ -15,6 +16,7 @@
 			<tr>
 			
 				<td><%= item.salary_id %></td>
+				<td><%= item.salary_month %></td>
 				<td><%= item.employee_id %></td>
 				<td><%= item.employee_name %></td>
 				<td><%= item.amount %></td>	
