--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,3 @@
-<% if current_user %>
-
 <div class ="col-md-10">
 	<table class="display table table-bordered table-striped">
 		<thead>
@@ -14,17 +12,25 @@
 		<tbody>
 			<% @items.each do |item| %>
 			<tr>
-			
+			<%if current_employee%>
+			<% if item.employee_id == current_employee.id %>
 				<td><%= item.salary_id %></td>
 				<td><%= item.salary_month %></td>
 				<td><%= item.employee_id %></td>
 				<td><%= item.employee_name %></td>
-				<td><%= item.amount %></td>	
+				<td><%= item.amount %></td>
+			<%end%>	
+			<%end%>
+			<% if current_user%>
+			<td><%= item.salary_id %></td>
+				<td><%= item.salary_month %></td>
+				<td><%= item.employee_id %></td>
+				<td><%= item.employee_name %></td>
+				<td><%= item.amount %></td>
+			<%end%>	
 			</tr>
-			<%#debugger%>
 			<% end %>
 		</tbody>
 	</table>
 </div>
 
-<%end%>
